1998-02-17  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* longalg.cc (napWrite): made it globally available to support
	FACTORY_DEBUG_OUT 

	* clapsing.cc (singclap_algdividecontent): inserted
	FACTORY_DEBUG_OUT
	

Mon Feb 16 10:43:38 MET 1998 hannes
   * added HAVE_TCL to ring.cc

Mon Feb  9 12:28:21 MET 1998 hannes
   * added tests for coeff-filed GF(q), added stbus for GF(q)-conversion
     (clapconv.cc clapsing.cc clapconv.h)

Tue Jan 27 19:45:19 MET 1998 hannes
   *  bug fixes for TEST_MAC_ORDER (binom.* polys-impl.h, spSpolyLoop.cc)
      (binom.* poly-impl.* spSpolyLoop.cc)

Mon Jan 26 18:40:43 MET 1998 hannes
   * changes in iparith.cc for define: PROC_BUG
     useful, if c++ cannot type cast proc variables

Sat Jan 24 18:21:24 MET 1998 hannes
   * bug fixes for TEST_MAC_ORDER (binom.* polys-impl.h, spSpolyLoop.cc)

Sat Jan 17 18:56:34 MET 1998 hannes
   * changes for TEST_MAC_ORDER, part 3 (binom.cc, binom.h, spSpolyLoop.cc)

Sat Jan 17 18:21:15 MET 1998 hannes
        * removed duplicate _memcpyW from mmalloc.c
        * fixed type cast in iplib.cc
        * changes for TEST_MAC_ORDER, part 2 (binom.cc, binom.h, spSpolyLoop.cc)

Fri Jan 16 15:30:07 MET 1998 Kai Krueger <krueger@mathematik.uni-kl.de>
        * extra.cc,febase.cc,febase.inc,grammar.y,iparith.cc
        * ipassign.cc,ipid.cc,ipid.h,iplib.cc,ipshell.h,misc.cc
        * mpsr_Put.cc,mpsr_Put.h,silink.cc,structs.h,subexpr.cc,subexpr.h
        * tesths.cc
          Implementation of new proc-scheme done.

Fri Jan 16 14:51:07 MET 1998 Kai Krueger <krueger@mathematik.uni-kl.de>
        * Makefile.in,tests/mpcheck,teste/comparecheck:
          fixed use of correct Singular during checks

Fri Jan 16 09:23:07 MET 1998
        * changes for TEST_MAC_ORDER, part 1 (hannes)

Wed Jan 14 15:36:04 1998  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

        * polys-impl.h (pMonAddFast): fixed handling of component

        * mmutil.c: added _memcpyW for DO_DEEP_PROFILE
